--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,10 @@ body {
   font-family: "Anton", sans-serif;
 }
 
+.image_radius {
+  border-radius: 1rem;
+}
+
 /******************* HOVER PROJECTS STYLING ********************/
 
 .container {
